# Findi

./: .gitignore  README.md  docker-compose.yml  search.ipynb
ML/: .dockerignore  Dockerfile  README.md  app_state.py  demo_example.py  document_preprocessing.py  main.py  pyproject.toml  requirements.txt  search.py  test.py
ML/app/: app_state.py  demo_example.py  document_preprocessing.py  main.py  search.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/routes/api/v1/: feedbacks.py  search.py
backend/app/utils/: ml_search.py
frontend/: .dockerignore  API-Integration-Guide.md  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.css  App.jsx  AudioViewer.jsx  PDFViewer.css  PDFViewer.jsx  VideoViewer.css  VideoViewer.jsx  api.js  index.css  main.jsx
frontend/src/examples/: http-examples.js
